# alpee-core

./: .gitignore  Cargo.toml  TODO.MD  alpee.toml  readme.md
modules/example/: Cargo.toml  module.toml
modules/example/src/: main.rs
src/: config.rs  error.rs  main.rs  state.rs
src/api/: mod.rs  rest.rs  ws.rs
src/ipc/: mod.rs  protocol.rs  unix_server.rs
src/module_manager/: manager.rs  mod.rs  module.rs  registry.rs
