[package]
name = "alpee-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
toml = "0.8"
thiserror = "2.0"