[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
